--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -28,13 +28,17 @@
     }
   },
   "OrganizationNotificationAddressSettings": {
-    "ChangesLogEndpoint": "https://kof-sync.st1.brreg.no/varslingsadresser/fragments/json/v1",
-    "ChangesLogPageSize": 10000,
+    "ChangesLogEndpoint": "https://kof-sync.ppe.brreg.no/varslingsadresser/fragments/json/v1",
+    "ChangesLogPageSize": 5000,
     "MaskinportenSettings": {
       "Environment": "test",
       "Scope": "",
       "ClientId": "value injected as secret",
       "EncodedJwk": "value injected as secret"
     }
+  },
+  "PlatformSettings": {
+    "ApiAuthorizationEndpoint": "http://localhost:5101/authorization/api/v1/",
+    "SubscriptionKey": "inserted-during-deployment"
   }
 }
