--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -28,6 +28,7 @@
     }
   },
   "OrganizationNotificationAddressSettings": {
+    "UpdateEndpoint": "https://kof-reception.ppe.brreg.no",
     "ChangesLogEndpoint": "https://kof-sync.ppe.brreg.no/varslingsadresser/fragments/json/v1",
     "ChangesLogPageSize": 5000,
     "MaskinportenSettings": {
