--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+* text=auto
+
 # These files are text and should be normalized (convert crlf -> lf)
 *.cs      text diff=csharp
 *.yaml    text
@@ -8,6 +10,8 @@
 *.cmd     text
 *.msbuild text
 *.md      text diff=markdown
+*.json   text
+Dockerfile text
 
 # Images should be treated as binary ('binary' is a macro for '-text -diff', i.e. "don't normalize or diff on content")
 *.png     binary
