USe same gitattributes as notifications

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,18 +1,22 @@
+# Prepend with the general automatic normalization (convert crlf -> lf) that uses Git's binary detection
 * text=auto
 
-# These files are text and should be normalized (convert crlf -> lf)
-*.cs      text diff=csharp
-*.yaml    text
-*.yml     text
-*.csproj  text
-*.sln     text
-*.ps1     text
-*.cmd     text
-*.msbuild text
-*.md      text diff=markdown
-*.json   text
+# Override with explicit specific settings for known and/or likely text files in our repo that should be normalized
+*.cmd      text
+*.cs       text diff=csharp
+*.csproj   text
+*.css      text diff=css
 Dockerfile text
+*.json     text
+*.md       text diff=markdown
+*.msbuild  text
+*.ps1      text
+*.sln      text
+*.yaml     text
+*.yml      text
 
 # Images should be treated as binary ('binary' is a macro for '-text -diff', i.e. "don't normalize or diff on content")
-*.png     binary
+*.cer     binary
 *.jpeg    binary
+*.pfx     binary
+*.png     binary
