First draft of Lookup main unit in register

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -41,5 +41,8 @@
   "PlatformSettings": {
     "ApiAuthorizationEndpoint": "http://localhost:5101/authorization/api/v1/",
     "SubscriptionKey": "inserted-during-deployment"
+  },
+  "RegisterSettings": {
+    "ApiRegisterEndpoint": "http://localhost:5020/register/api/"
   }
 }
