--- a/src/Altinn.Profile.Integrations/Altinn.Profile.Integrations.csproj
+++ b/src/Altinn.Profile.Integrations/Altinn.Profile.Integrations.csproj
@@ -19,6 +19,9 @@
 		<PackageReference Include="Yuniql.AspNetCore" Version="1.2.25" />
 		<PackageReference Include="Yuniql.PostgreSql" Version="1.3.15" />
 		<PackageReference Include="Altinn.Common.PEP" Version="4.1.2" />
+		<PackageReference Include="WolverineFx" Version="4.5.1" />
+    	<PackageReference Include="WolverineFx.EntityFrameworkCore" Version="4.5.1" />
+    	<PackageReference Include="WolverineFx.Postgresql" Version="4.5.1" />
 	</ItemGroup>
 
 	<ItemGroup>
