--- a/src/Altinn.Profile.Integrations/Altinn.Profile.Integrations.csproj
+++ b/src/Altinn.Profile.Integrations/Altinn.Profile.Integrations.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Altinn.Common.AccessTokenClient" Version="3.0.15" />
 		<PackageReference Include="AutoMapper" Version="14.0.0" />
 		<PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.14.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
