Make it possible to disable PlatformAccessToken validation

--- a/src/Altinn.Profile/appsettings.Development.json
+++ b/src/Altinn.Profile/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "PlatformAccessTokenAuthorization:Disabled": true,
   "PostgreSqlSettings": {
     "MigrationScriptPath": "../Altinn.Profile.Integrations/Migration"
   },
