--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -12,8 +12,8 @@
   },
   "PostgreSqlSettings": {
     "MigrationScriptPath": "Migration",
-    "AdminConnectionString": "Host=localhost;Port=5432;Username=platform_profile_admin;Password={0};Database=profiledb",
-    "ConnectionString": "Host=localhost;Port=5432;Username=platform_profile;Password={0};Database=profiledb",
+    "AdminConnectionString": "Host=localhost;Port=5432;Username=platform_profile_admin;Password={0};Database=profiledb;Pooling=false",
+    "ConnectionString": "Host=localhost;Port=5432;Username=platform_profile;Password={0};Database=profiledb;Maximum Pool Size=4",
     "ProfileDbAdminPwd": "Password",
     "ProfileDbPwd": "Password",
     "EnableDBConnection": true
