--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -4,8 +4,8 @@
     "JwtCookieName": "AltinnStudioRuntime"
   },
   "SblBridgeSettings": {
-    "ApiProfileEndpoint": "https://at23.altinn.cloud/sblbridge/profile/api/",
-    "UpdateA2":  true
+    "ApiProfileEndpoint": "http://localhost:3000", //"https://at23.altinn.cloud/sblbridge/profile/api/",
+    "UpdateA2": true
   },
   "CoreSettings": {
     "EnableLocalKrrFetch": false,
