--- a/test/Altinn.Profile.Tests/Altinn.Profile.Tests.csproj
+++ b/test/Altinn.Profile.Tests/Altinn.Profile.Tests.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.12.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
