--- a/src/Altinn.Profile.Core/Altinn.Profile.Core.csproj
+++ b/src/Altinn.Profile.Core/Altinn.Profile.Core.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Altinn.Profile.Models\Altinn.Profile.Models.csproj" />
+    <ProjectReference Include="..\Altinn.Profile.Models\Altinn.Profile.Models.csproj" />
   </ItemGroup>
 
 </Project>
