--- a/src/ServiceDefaults.Leases/Altinn.Authorization.ServiceDefaults.Leases.csproj
+++ b/src/ServiceDefaults.Leases/Altinn.Authorization.ServiceDefaults.Leases.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="Altinn.Register.Persistence.Tests" />
+    <InternalsVisibleTo Include="Altinn.Profile.Tests" />
   </ItemGroup>
 
 </Project>
