--- a/src/Altinn.Profile/appsettings.Development.json
+++ b/src/Altinn.Profile/appsettings.Development.json
@@ -8,5 +8,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ImportJobSettings": {
+    "FavoritesImportEnabled": true,
+    "NotificationSettingsImportEnabled": true
   }
 }
