--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -50,7 +50,7 @@
     "ApiNotificationsEndpoint": "http://localhost:5090/notifications/api/"
   },
   "ImportJobSettings": {
-    "FavoritesImportEnabled": true,
-    "NotificationSettingsImportEnabled": true
+    "FavoritesImportEnabled": false,
+    "NotificationSettingsImportEnabled": false
   }
 }
