--- a/src/Altinn.Profile/appsettings.Development.json
+++ b/src/Altinn.Profile/appsettings.Development.json
@@ -10,7 +10,10 @@
     }
   },
   "ImportJobSettings": {
-    "FavoritesImportEnabled": true,
-    "NotificationSettingsImportEnabled": true
+    "FavoritesImportEnabled": false,
+    "NotificationSettingsImportEnabled": false
+  },
+  "SblBridgeSettings": {
+    "UpdateA2": true
   }
 }
