--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -5,7 +5,8 @@
   },
   "SblBridgeSettings": {
     "ApiProfileEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
-    "UpdateA2": false
+    "UpdateA2Favorites": false,
+    "UpdateA2NotificationSettings": false
   },
   "CoreSettings": {
     "EnableLocalKrrFetch": false,
