--- a/test/Altinn.Profile.Tests/Altinn.Profile.Tests.csproj
+++ b/test/Altinn.Profile.Tests/Altinn.Profile.Tests.csproj
@@ -39,6 +39,7 @@
 
   <ItemGroup>
     <None Remove="appsettings.test.json" />
+    <None Remove="Changelog\ProfileSettingImportJobTests.cs~RFe453f7.TMP" />
   </ItemGroup>
 
   <ItemGroup>
