--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -1,7 +1,8 @@
 {
   "GeneralSettings": {
     "OpenIdWellKnownEndpoint": "http://localhost:5040/authentication/api/v1/openid/",
-    "JwtCookieName": "AltinnStudioRuntime"
+    "JwtCookieName": "AltinnStudioRuntime",
+    "LookupUnitContactPointsAtSblBridge":  true
   },
   "SblBridgeSettings": {
     "ApiProfileEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
