--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -2,7 +2,7 @@
   "GeneralSettings": {
     "OpenIdWellKnownEndpoint": "http://localhost:5040/authentication/api/v1/openid/",
     "JwtCookieName": "AltinnStudioRuntime",
-    "LookupUnitContactPointsAtSblBridge":  true
+    "LookupUnitContactPointsAtSblBridge":  false
   },
   "SblBridgeSettings": {
     "ApiProfileEndpoint": "https://at22.altinn.cloud/sblbridge/profile/api/",
