--- a/renovate.json
+++ b/renovate.json
@@ -21,7 +21,7 @@
     {
       "matchManagers": ["nuget"],
       "matchUpdateTypes": ["major"],
-      "groupByPackagePattern": "^([^\\.]+)"
+      "matchPackagePatterns": ["^([^\\.]+)"]
     }
   ]
 }
