--- a/.github/workflows/build-and-analyze-fork.yml
+++ b/.github/workflows/build-and-analyze-fork.yml
@@ -8,6 +8,8 @@ jobs:
     if: github.actor == 'dependabot[bot]' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == true)
     name: Build and Test
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Setup .NET
         uses: actions/setup-dotnet@d4c94342e560b34958eacfc5d055d21461ed1c5d # v5.0.0
@@ -40,6 +42,7 @@ jobs:
     name: Report code coverage
     runs-on: ubuntu-latest
     needs: test
+    permissions: {}
     steps:
       - name: Download Coverage Results
         uses: actions/download-artifact@master
